PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Valid/IfTypeCheck.pf
module IfTypeCheck {

    test Int = 5

    fun testFive(): Boolean {
        if test == 5 {
            return true
        }

        return false
    }
}