PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Invalid/ReturnExpressionNecessary.pf
module ReturnExpressionNecessary {

    fun testNothing() : Void {
        Int i = 0
    }

    fun testSomething() : Int {
        Int i = 0

        // should throw error: return required
    }
}